UX, refactoring, fixes
UX, refactoring, fixes

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -132,7 +132,13 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 Make ajax "wizard steps" logging show in the alerts interface, and consider having any "market" errors be shown only in debugging mode. Maybe only under the condition that an asset search is in-progress, which we already set the global flag $ct['ticker_markets_search'] to know when this is happening. Usually though (IF no asset search is in-progress), we prefer market errors to show in the interface.
 
 
+$wevhook_params and $webhook_key should be put in a new global $ct['plug_webhook'][setting here], for clarity / to avoid clashes, when multiple plugins are run during the same runtime.
+
+
 Hook the plugin webhook API system into the API limiter for the internal API. Use the same system, as we want to securely throttle request response per ip address, across ALL internal API endpoints.
+
+
+In step #6 within the plugin development documentation, add notes on creating a READ-ONLY plugin config in the INTERFACE, for PLACEHOLDER settings you want to dynamically change later in initiation logic.
 
 
 Move all remaining relevent APIs over to the new per-second / per-minute throttling system.
