UX, notes, DEMO revs
UX, notes, DEMO revs

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -129,6 +129,9 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
+Assure we are forcing ALL plugins to have a version number registered, BEFORE we allow them to be activated.
+
+
 Add WEB BROWSER user agent (IF populated) to admin login comm alert message.
 
 
