--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -129,6 +129,12 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
+Assure we are forcing ALL plugins to have a version number registered, BEFORE we allow them to be activated.
+
+
+Add WEB BROWSER user agent (IF populated) to admin login comm alert message.
+
+
 Work on price chart light chart LINKS not having enough SPACE, when chart titles to the right ARE LONG.
 
 
